--- a/package.json
+++ b/package.json
@@ -43,11 +43,15 @@
         {
           "target": "dmg",
           "arch": [
-            "universal"
+            "x64",
+            "arm64"
           ]
         }
       ]
     },
+    "asarUnpack": [
+      "dist/binaries/**"
+    ],
     "files": [
       "dist/**/*",
       "package.json"
